fixed window z-index

--- a/ui/styles/index.css
+++ b/ui/styles/index.css
@@ -233,6 +233,29 @@
 
 /* window */
 
+
+/*
+.window {
+	z-index: 1;
+}
+
+.window.hidden {
+	z-index: -1;
+}
+
+.window, 
+.window *,
+.window::after {
+	transition: opacity 0.5s;
+}
+
+.window.hidden,
+.window.hidden *,
+.window.hidden::after {
+	transition: opacity 0.5s;
+}
+*/
+
 .window .frame {
     position: absolute;
 	left: 50%;
@@ -248,10 +271,6 @@
 	border-left: 0.05em solid rgb(150,85,0);
 	padding: 0.5em;
 	z-index: 3;
-}
-
-.window.hidden {
-	z-index: -1;
 }
 
 .window .frame h1,
